--- a/src/template.html
+++ b/src/template.html
@@ -3,18 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant Page</title>
+    <title>Project Name</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <button id="home-tab">Home</button>
-        <button id="menu-tab">Menu</button>
-        <button id="about-tab">About</button>
-      </nav>
-    </header>
-    <div id="content">
-      
-    </div>
+    <h1>Hello, world!</h1>
   </body>
 </html>
